fixed spacing around timeline

--- a/assets/css/timelinestyle.css
+++ b/assets/css/timelinestyle.css
@@ -46,7 +46,7 @@ Main components
 
 
 #timeline {
-  margin-top: 4em;
+  padding-top: 100px;
 }
 
 #cd-timeline {
